# GeometricPredicates

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
include/ArbitraryPrecision/: ArbitraryPrecision.hpp  BSNumber.hpp  BSPrecision.hpp  BSRational.hpp  BitHacks.hpp  IEEEBinary.hpp  IEEEBinary16.hpp  Logger.hpp  Math.hpp  UIntegerALU32.hpp  UIntegerAP32.hpp  UIntegerFP32.hpp
predicates/: GenericTypes.cpp  GenericTypes.hpp  mesh.cpp  mesh.hpp  point.cpp  point.hpp
